--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
         </ul>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">Publications</a></li>
             <li><a href="#" role="button">Contact</a></li>
         </ul>
     </nav>
@@ -24,7 +22,8 @@
                 <hgroup>
                     <h2>About Me</h2>
                 </hgroup>
-                <p>Awaiting your introduction.</p>
+                <p>Welcome to my digital space, a gateway to my journey and expertise in Planetary Science, with a special emphasis on image analysis. Boasting over 7 years of experience in this intriguing field, I have cultivated a profound understanding of polar atmospheric-surface interactions on Mars. This knowledge has been invaluable, not only in my primary research but also in intersecting areas like computer science and image analysis. My career has been characterized by roles such as a Planetary Scientist and a mentor to undergraduate students, highlighting a fusion of deep technical acumen, forward-thinking leadership, and a fervent commitment to education.</p>
+                <p>Embark on a journey through my professional milestones, as chronicled in my CV, which traces my evolution from an undergraduate Astronomy enthusiast to a seasoned Planetary Scientist. The website also presents a detailed collection of my scholarly work, particularly focusing on Martian Polar Dynamics. My diverse skill set, reflective of my unwavering dedication to learning and adapting within the dynamic realm of research, is also showcased here. In addition to my professional endeavours, this portal offers a glimpse into my passion for astrophotography, a delightful convergence of science and art.</p>
                 <h3>Skills</h3>
                 <p>Python (Data Analysis, Data Visualization, Image Processing, Machine Learning) | MATLAB, UNIX (Ubuntu and SHELL coding) | C++ | MS Office Suite | ISIS (Processing raw orbital observations)</p>
                 <h3>Publications</h3>
