--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </ul>
         <ul>
             <li><a href="#">Home</a></li>
+            <li><a href="#astrophotography">Astrophotography</a></li>
             <li><a href="#" role="button">Contact</a></li>
         </ul>
     </nav>
@@ -33,6 +34,19 @@
                     <li><a href="https://doi.org/10.3847/25c2cfeb.4db95c67" target="_blank">Solar-System-Wide Significance of Mars Polar Science</a> - Bulletin of the American Astronomical Society (Co-author)</li>
                     <li><a href="https://doi.org/10.1016/j.icarus.2022.115295" target="_blank">Tracking the Northern Seasonal Cap Retreat of Mars Using Computer Vision</a> - Icarus (First Author)</li>
                 </ul>
+            </section>
+            <section id="astrophotography">
+                <h2>Astrophotography</h2>
+                <p>Enjoy a collection of my astrophotography images capturing the beauty of the cosmos.</p>
+                <figure>
+                    <img src="https://source.unsplash.com/featured/?space" alt="Astrophotography Image 1">
+                    <figcaption>Captivating View of Space</figcaption>
+                </figure>
+                <figure>
+                    <img src="https://source.unsplash.com/featured/?stars" alt="Astrophotography Image 2">
+                    <figcaption>Starry Night Sky</figcaption>
+                </figure>
+                <!-- Add more images as needed -->
             </section>
         </div>
     </main>
