--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         </ul>
         <ul>
             <li><a href="#">Home</a></li>
+            <li><a href="#publications">Publications</a></li>
             <li><a href="#astrophotography">Astrophotography</a></li>
-            <li><a href="#" role="button">Contact</a></li>
+            <li><a href="mailto:pruthvi.acharya.54@gmail.com">Contact</a></li>
         </ul>
     </nav>
     <main class="container">
@@ -27,7 +28,9 @@
                 <p>Embark on a journey through my professional milestones, as chronicled in my CV, which traces my evolution from an undergraduate Astronomy enthusiast to a seasoned Planetary Scientist. The website also presents a detailed collection of my scholarly work, particularly focusing on Martian Polar Dynamics. My diverse skill set, reflective of my unwavering dedication to learning and adapting within the dynamic realm of research, is also showcased here. In addition to my professional endeavours, this portal offers a glimpse into my passion for astrophotography, a delightful convergence of science and art.</p>
                 <h3>Skills</h3>
                 <p>Python (Data Analysis, Data Visualization, Image Processing, Machine Learning) | MATLAB, UNIX (Ubuntu and SHELL coding) | C++ | MS Office Suite | ISIS (Processing raw orbital observations)</p>
-                <h3>Publications</h3>
+            </section>
+            <section id="publications">
+                <h2>Publications</h2>
                 <p>Here are some of my significant contributions to scientific research:</p>
                 <ul>
                     <li><a href="https://doi.org/10.1016/j.icarus.2023.115794" target="_blank">Revelations of Interannual Dune Evolution from the Swiftest Aeolian System on Mars by MRO/HiRISE Long-Term Monitoring</a> - Icarus (Third Author)</li>
@@ -39,12 +42,16 @@
                 <h2>Astrophotography</h2>
                 <p>Enjoy a collection of my astrophotography images capturing the beauty of the cosmos.</p>
                 <figure>
-                    <img src="https://source.unsplash.com/featured/?space" alt="Astrophotography Image 1">
-                    <figcaption>Captivating View of Space</figcaption>
+                    <img src="https://raw.githubusercontent.com/acharyapruthvi/pruthviacharya.github.io/main/10_11_2022.jpg" alt="Astrophotography Image 1">
+                    <figcaption>Full Moon on October 11, 2022</figcaption>
                 </figure>
                 <figure>
-                    <img src="https://source.unsplash.com/featured/?stars" alt="Astrophotography Image 2">
-                    <figcaption>Starry Night Sky</figcaption>
+                    <img src="https://raw.githubusercontent.com/acharyapruthvi/pruthviacharya.github.io/main/14_01_2022.jpg" alt="Astrophotography Image 2">
+                    <figcaption>Waxing Gibbous on January 14, 2022</figcaption>
+                </figure>
+                <figure>
+                    <img src="https://raw.githubusercontent.com/acharyapruthvi/pruthviacharya.github.io/main/630_annotated_tiff.jpg" alt="Astrophotography Image 2">
+                    <figcaption>Whirlpool Galaxy (M51)</figcaption>
                 </figure>
                 <!-- Add more images as needed -->
             </section>
