adding astrophotography to index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </section>
             <section id="astrophotography">
                 <h2>Astrophotography</h2>
-                <p>Enjoy a collection of my astrophotography images capturing the beauty of the cosmos.</p>
+                <p>A few images from my astrophotography collection.</p>
                 <figure>
                     <img src="https://raw.githubusercontent.com/acharyapruthvi/pruthviacharya.github.io/main/10_11_2022.jpg" alt="Astrophotography Image 1">
                     <figcaption>Full Moon on October 11, 2022</figcaption>
