Update with my csv index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,6 +13,7 @@
         </ul>
         <ul>
             <li><a href="mailto:pruthvi.acharya.54@gmail.com">Contact</a></li>
+            <li><a href="https://acharyapruthvi.github.io/Pruthviraj_(Pruthvi)%20Acharya_Research_CV.pdf" target="_blank">View CV</a></li>
         </ul>
     </nav>
     <main class="container">
@@ -22,7 +23,7 @@
                     <h2>About Me</h2>
                 </hgroup>
                 <p>Welcome to my digital space, a gateway to my journey and expertise in Planetary Science, with a special emphasis on image analysis. Boasting over 7 years of experience in this intriguing field, I have cultivated a profound understanding of polar atmospheric-surface interactions on Mars. This knowledge has been invaluable, not only in my primary research but also in intersecting areas like computer science and image analysis. My career has been characterized by roles such as a Planetary Scientist and a mentor to undergraduate students, highlighting a fusion of deep technical acumen, forward-thinking leadership, and a fervent commitment to education.</p>
-                <p>Embark on a journey through my professional milestones, as chronicled in my CV, which traces my evolution from an undergraduate Astronomy enthusiast to a seasoned Planetary Scientist. The website also presents a detailed collection of my scholarly work, particularly focusing on Martian Polar Dynamics. My diverse skill set, reflective of my unwavering dedication to learning and adapting within the dynamic realm of research, is also showcased here. In addition to my professional endeavours, this portal offers a glimpse into my passion for astrophotography, a delightful convergence of science and art.</p>
+                <p>For a detailed look at my professional journey, please view <a href="https://acharyapruthvi.github.io/Pruthviraj_(Pruthvi)%20Acharya_Research_CV.pdf" target="_blank">My CV</a>.</p>
                 <h3>Skills</h3>
                 <p>Python (Data Analysis, Data Visualization, Image Processing, Machine Learning) | MATLAB, UNIX (Ubuntu and SHELL coding) | C++ | MS Office Suite | ISIS (Processing raw orbital observations)</p>
             </section>
@@ -39,15 +40,15 @@
                 <h2>Astrophotography</h2>
                 <p>A few images from my astrophotography collection.</p>
                 <figure>
-                    <img src="https://raw.githubusercontent.com/acharyapruthvi/acharyapruthvi.github.io/main/10_11_2022.jpg" alt="Astrophotography Image 1">
+                    <img src="https://raw.githubusercontent.com/acharyapruthvi/pruthviacharya.github.io/main/10_11_2022.jpg" alt="Astrophotography Image 1">
                     <figcaption>Full Moon on October 11, 2022</figcaption>
                 </figure>
                 <figure>
-                    <img src="https://raw.githubusercontent.com/acharyapruthvi/acharyapruthvi.github.io/main/14_01_2022.jpg" alt="Astrophotography Image 2">
+                    <img src="https://raw.githubusercontent.com/acharyapruthvi/pruthviacharya.github.io/main/14_01_2022.jpg" alt="Astrophotography Image 2">
                     <figcaption>Waxing Gibbous on January 14, 2022</figcaption>
                 </figure>
                 <figure>
-                    <img src="https://raw.githubusercontent.com/acharyapruthvi/acharyapruthvi.github.io/main/630_annotated_tiff.jpg" alt="Astrophotography Image 2">
+                    <img src="https://raw.githubusercontent.com/acharyapruthvi/pruthviacharya.github.io/main/630_annotated_tiff.jpg" alt="Astrophotography Image 3">
                     <figcaption>Whirlpool Galaxy (M51)</figcaption>
                 </figure>
                 <!-- Add more images as needed -->
