--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <ul>
             <li><strong>Pruthviraj (Pruthvi) Acharya</strong></li>
         </ul>
-        <ul>
+        <ul>            
             <li><a href="mailto:pruthvi.acharya.54@gmail.com">Contact</a></li>
-            <li><a href="https://acharyapruthvi.github.io/Pruthviraj_(Pruthvi)%20Acharya_Research_CV.pdf" target="_blank">View CV</a></li>
+            <li><a href="https://acharyapruthvi.github.io/Pruthviraj-(Pruthvi)-Acharya-NO_NUMBER.pdf" target="_blank">View CV</a></li>
         </ul>
     </nav>
     <main class="container">
@@ -23,7 +23,6 @@
                     <h2>About Me</h2>
                 </hgroup>
                 <p>Welcome to my digital space, a gateway to my journey and expertise in Planetary Science, with a special emphasis on image analysis. Boasting over 7 years of experience in this intriguing field, I have cultivated a profound understanding of polar atmospheric-surface interactions on Mars. This knowledge has been invaluable, not only in my primary research but also in intersecting areas like computer science and image analysis. My career has been characterized by roles such as a Planetary Scientist and a mentor to undergraduate students, highlighting a fusion of deep technical acumen, forward-thinking leadership, and a fervent commitment to education.</p>
-                <p>For a detailed look at my professional journey, please view <a href="https://acharyapruthvi.github.io/Pruthviraj_(Pruthvi)%20Acharya_Research_CV.pdf" target="_blank">My CV</a>.</p>
                 <h3>Skills</h3>
                 <p>Python (Data Analysis, Data Visualization, Image Processing, Machine Learning) | MATLAB, UNIX (Ubuntu and SHELL coding) | C++ | MS Office Suite | ISIS (Processing raw orbital observations)</p>
             </section>
