--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <container>
         <section id="about">
             <h2>About Me</h2>
-            <p>Hello! I'm Pruthviraj Acharya, specializing in the study of Mars' polar regions at York University. My research utilizes advanced computer vision techniques to analyze Martian climate patterns and seasonal dynamics, contributing to our understanding of the planet's unique environmental processes. With a strong background in Physics and Astronomy, I am passionate about mentoring emerging scientists and sharing insights into planetary sciences through my work and teaching. This website showcases my research projects, publications, and my journey in the exciting field of space science.</p>
+            <p>Hello! I'm Pruthviraj (Pruthvi) Acharya, specializing in the study of Mars' polar regions at York University. My research utilizes advanced computer vision techniques to analyze Martian climate patterns and seasonal dynamics, contributing to our understanding of the planet's unique environmental processes. With a strong background in Physics and Astronomy, I am passionate about merging emerging novel techniques into planetary science. This website showcases my research projects, publications, and my journey in the exciting field of space science.</p>
         </section>
         <section id="publications">
             <h2>Publications</h2>
