--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 </head>
 <body>
     <header>
-        <h1>Pruthviraj Acharya</h1>
-        <p>Planetary Scientist and Astrophotographer</p>
+        <h1>Dr. Pruthviraj Acharya</h1>
+        <p>Planetary Scientist (Martian Ice Detective) and Astrophotographer</p>
     </header>
     <nav>
         <a href="https://acharyapruthvi.github.io/Research_CV.pdf" target="_blank">CV</a> <!-- Update this link with the actual URL of your CV -->
@@ -41,7 +41,7 @@
     <container>
         <section id="about">
             <h2>About Me</h2>
-            <p>Hello! I’m Pruthviraj (Pruthvi) Acharya, a researcher specializing in the study of Mars’ polar ice regions. My work focuses on analyzing Martian climate patterns and seasonal dynamics using advanced computer vision techniques, contributing to a deeper understanding of the planet’s unique environmental processes. With a PhD in Physics and Astronomy from York University, I am passionate about integrating novel methods into planetary science to explore the frontiers of space research. This website highlights my research projects, publications, and my journey in the fascinating field of space science.</p>
+            <p>Welcome to my corner of the cosmos! I’m a researcher specializing in Martian polar ice, where I explore the mysteries of the Red Planet’s frozen regions. As a Martian ice detective, I analyze data to uncover the history, behavior, and secrets locked within Mars’ polar ice caps. My work combines planetary science, remote sensing, and a passion for discovery to understand how these icy layers shape the Martian climate and geology over time.</p>
         </section>
         <section id="publications">
             <h2>Publications</h2>
